2018-08-16  Zalan Bujtas  <zalan@apple.com>

        [LFC] Bail out of subtree verification when trees are out of sync.
        https://bugs.webkit.org/show_bug.cgi?id=188633

        Reviewed by Antti Koivisto.

        There's no point of trying to match geometry when subtrees are out of sync.
        They get out of sync when the render tree has unsupported boxes (see LayoutTreeBuilder).

        * layout/Verification.cpp:
        (WebCore::Layout::verifyAndOutputSubtree):

2018-08-16  Antti Koivisto  <antti@apple.com>

        Use OptionSet for ActivityState::Flags
        https://bugs.webkit.org/show_bug.cgi?id=188554

        Reviewed by Brent Fulgham.

        More typesafe flags.

        * Modules/geolocation/GeolocationController.cpp:
        (WebCore::GeolocationController::activityStateDidChange):
        * Modules/geolocation/GeolocationController.h:
        * html/canvas/WebGLRenderingContextBase.cpp:
        (WebCore::WebGLRenderingContextBase::activityStateDidChange):
        * html/canvas/WebGLRenderingContextBase.h:
        * page/ActivityState.cpp:
        (WebCore::operator<<):
        (WebCore::activityStateFlagsToString): Deleted.
        * page/ActivityState.h:
        (WebCore::ActivityState::allFlags):
        * page/ActivityStateChangeObserver.h:
        * page/FocusController.cpp:
        (WebCore::FocusController::FocusController):
        (WebCore::FocusController::setFocused):
        (WebCore::FocusController::setActivityState):
        (WebCore::FocusController::setActive):
        * page/FocusController.h:
        (WebCore::FocusController::isActive const):
        (WebCore::FocusController::isFocused const):
        (WebCore::FocusController::contentIsVisible const):
        * page/Page.cpp:
        (WebCore::pageInitialActivityState):
        (WebCore::Page::Page):
        (WebCore::Page::setIsInWindow):
        (WebCore::Page::updateTimerThrottlingState):
        (WebCore::Page::setActivityState):